tests/cases/negative/typing/types/incorrectTypeForLambda.lam
-- we should be able to see that the 'Type 0' and 'Level' types do not match here
test : Level -> Level
test = \(x : Type 0) -> lzero
